# llme

./: .gitignore  CHANGELOG.md  PKGBUILD  README.md  README.vibe.md  benchmark.md  config.toml  llme.py  openai_chat.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/: weather_plugin.py
llme/: __init__.py  config.toml  main.py
tests/: analyseresults.py  basic_tasks.sh  clismoke.sh  crapto.sh  debug_fib.sh  hello.sh  image.sh  iter_models.sh  patch_file.sh  rmlog.sh  run_all.sh  run_all_suites.sh  showresult.sh  smoketest.sh  utils.sh
tests/data/: chat.json  config.toml
utils/: update-readme.sh
