[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llme"
version = "0.1.0"
authors = [
    {name = "Jean Privat", email = "jean@pryen.org"},
]
description = "A command-line interface for language models"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "termcolor",
    "sseclient-py",
    "python-magic",
]

[project.urls]
Repository = "https://github.com/privat/llme"

[project.scripts]
llme = "llme:main"

[tool.setuptools.packages.find]
include = ["llme"]
